01 - OpenCRVS Documentation/v1.3/product-specifications/support-functions/13.-performance-management.md
---
title: "13. Performance management"
source_url: "https://documentation.opencrvs.org/v1.3/product-specifications/support-functions/13.-performance-management"
markdown_url: "https://documentation.opencrvs.org/v1.3/product-specifications/support-functions/13.-performance-management.md"
version: "v1.3"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:38c950d2ddfc20188c645759cb81c836b9f00fa56815e975e214009f378d59e7"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.3/product-specifications/support-functions/13.-performance-management.md).

# 13. Performance management

OpenCRVS dashboards leverage the power of Metabase to transform civil registration data into insightful visualisations. Each dashboard is highly customisable, allowing users to create and integrate various data views to suit their specific needs. Out of the box, OpenCRVS is equipped with an array of default visualisations to give insight on the standard civil registration and vital statistics KPIs.

Helping performance managers understand how their system and workflows are performing and inform targeted corrective action. To ensure they are on target to achieving universal registration rates.

OpenCRVS provides 4 performance views:

1. **Registrations**: Infographics of registration data (Access: Performance Manager)
2. **Statistics**: Infographics of vital statistics data (Access: Performance Manager)
3. **Leaderboards**: Infographics of performance of Registrars and Registration Offices (Access: Performance Manager)
4. **Performance**: Reports in table form on CRVS performance… (Access: All users)

### **Configuration options**

* Add/remove performance dashboards visualisations using Metabase interfaces

### Performance dashboards

#### **Dashboard**

Filters:

* Vital event type
* Time period
* State
* Gender

Visualisation widgets:

* Registrations
* Registrations certified
* Registrations by age
* Registrations by gender
* Completeness rate
* Completeness rate by State
* Registrations over time
* Record corrections by type
* Registrations by state

#### Statistics

Filters:

* Vital event type
* Time period
* State
* Gender

Visualisation widgets:

* By order
* By age of mother
* By literacy of parents
* By level of education of parents
* By place of birth

#### Leaderboards

Filters: Vital event type, time period, state, gender

* Leaderboard of Registrars
* Leaderboard by location????

#### Performance management

Filters:

* Vital event type
* Time period
* Location

Statistics:

* Completeness rates
* Registrations
* Certificate issued
* Source of declarations
* Corrections


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.3/product-specifications/support-functions/13.-performance-management.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
